<resources>
    <string name="app_name">FavRecipe</string>
    <string name="title_home">All Dishes</string>
    <string name="title_dashboard">Favourite</string>
    <string name="title_notifications">Random Dish</string>
    <string name="splash_screen_title">Favourite dishes</string>
    <string name="action_add_dish">Add Dish</string>
    <string name="image_contentDescription">image</string>
    <string name="lbl_title">Title</string>
    <string name="lbl_type">Type</string>
    <string name="lbl_category">Category</string>
    <string name="lbl_ingredients">Ingredients</string>
    <string name="lbl_cooking_time">Cooking Time In Minutes</string>
    <string name="lbl_direction">Direction To Cook</string>
    <string name="lbl_add_dish">ADD DISH</string>
    <string name="title_select_dish_type">SELECT DISH TYPE</string>
    <string name="title_select_dish_category">SELECT DISH CATEGORY</string>
    <string name="title_select_dish_cooking_time">SELECT COOKING TIME IN MINUTES</string>

    <string name="err_msg_select_dish_image">Select dish image.</string>
    <string name="err_msg_enter_dish_title">Enter dish title.</string>
    <string name="err_msg_select_dish_type">Select dish type.</string>
    <string name="err_msg_select_dish_category">Select dish category.</string>
    <string name="err_msg_enter_dish_ingredients">Enter dish ingredients.</string>
    <string name="err_msg_select_dish_cooking_time">Select dish cooking time.</string>
    <string name="err_msg_enter_dish_cooking_instructions">Enter dish cooking instructions.</string>
    <string name="no_dishes_yet">No Dishes available yet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="directions_to_cook">Directions to cook</string>
    <string name="dish_title">Dish Title</string>
    <string name="type">Type</string>
    <!--END-->

    <string name="label_no_dishes_added_yet">No dishes added yet!!!</string>

    <string name="title_dish_details">Dish Details</string>

    <!-- TODO Step 6: Add the string value to the strings.xml-->
    <!--START-->
    <string name="lbl_estimate_cooking_time">The approx time required to cook the dish is %1$s minutes.</string>
    <string name="direction_to_cook">Direction to cook</string>



</resources>