<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.RandomDishFragment">

    <ScrollView
        android:id="@+id/rl_dish_detail_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        tools:context=".view.fragments.DishDetailsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_dish_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@color/dish_image_background"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|end"
                    android:layout_margin="10dp"
                    android:background="@drawable/favorite_button_background"
                    android:elevation="10dp">

                    <ImageView
                        android:id="@+id/iv_favorite_dish"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_favorite_unselected" />
                </LinearLayout>

            </FrameLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textColor="@color/blue_grey_900"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Dish Title" />

            <TextView
                android:id="@+id/tv_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/grey_900"
                android:textSize="16sp"
                tools:text="Type" />

            <TextView
                android:id="@+id/tv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/grey_500"
                android:textSize="14sp"
                tools:text="Category" />

            <TextView
                android:id="@+id/tv_ingredients_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/lbl_ingredients"
                android:textColor="@color/blue_grey_900"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="10dp"
                android:textColor="@color/grey_500"
                android:textSize="14sp"
                tools:text="Ingredients Value" />

            <TextView
                android:id="@+id/tv_cooking_direction_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/directions_to_cook"
                android:textColor="@color/blue_grey_900"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_cooking_direction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="@color/grey_900"
                android:textSize="14sp"
                tools:text="Ingredients Value" />

            <TextView
                android:id="@+id/tv_cooking_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                android:textColor="@color/grey_500"
                android:textSize="18sp"
                tools:text="@string/lbl_estimate_cooking_time" />


        </LinearLayout>


    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>